# c2rust-init

./: .gitignore  Cargo.toml  LICENSE  README.md  test_unsafe
.github/workflows/: publish.yml
src/: lib.rs  main.rs
tests/: cli_args.rs  create_c2rust_dir.rs  integration_tests.rs
