[package]
name = "c2rust-init"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["LuuuXXX"]
description = "A command-line tool for initializing c2rust project structure"
license = "MIT"
repository = "https://github.com/LuuuXXX/c2rust-init"
readme = "README.md"
keywords = ["c2rust", "initialization", "cli", "tool"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
git2 = "0.19"

[dev-dependencies]
tempfile = "3"
